fixing css bug to about

--- a/index.html
+++ b/index.html
@@ -186,12 +186,18 @@
                 >
             </div>
             <div class="about__content__client max">
-                <img src="src/img/client.webp" alt="Photo de profil d'un client" title="Photo de profil d'un client">
+                <div class="about__content__client__image">
+                    <img src="src/img/client.webp"
+                         alt="Photo de profil d'un client"
+                         title="Photo de profil d'un client"
+                         width="800"
+                         height="646">
+                </div>
                 <blockquote>
                     “Bon travail, mon site m’as permis de mieux me développer et également générer beaucoup plus de
                     revenus.”
-                    <cite>Tom Martin</cite>
-                    <span>client</span>
+                    <cite>Tom Martin <span>client</span></cite>
+
                 </blockquote>
             </div>
             <div class="about__content__stats max">
@@ -220,7 +226,7 @@
                     Découvrez mes compétences acquises lors de mon parcours scolaire ainsi que dans ma vie
                     professionnelle.
                 </p>
-                <svg  class="special_hidden" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 419.99 373.73">
+                <svg class="special_hidden" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 419.99 373.73">
                     <defs>
                         <style>.cls-1 {
                             fill: none;
@@ -303,7 +309,8 @@
         <span class="reviews__smallText">Que disent ils&nbsp;?</span>
         <div class="reviews__slider">
             <article class="reviews__slider__article" itemscope itemtype="https://schema.org/Review">
-                <h2 role="heading" aria-level="2" class="reviews__slider__article__title hidden" itemprop="name">Avis Frédéric
+                <h2 role="heading" aria-level="2" class="reviews__slider__article__title hidden" itemprop="name">Avis
+                    Frédéric
                     Dubois</h2>
                 <p class="reviews__slider__article__text" itemprop="reviewBody">
                     “Sam a dépassé nos attentes avec le design de notre boutique en ligne. Le site
@@ -317,7 +324,8 @@
                 </p>
             </article>
             <article class="reviews__slider__article" itemscope itemtype="https://schema.org/Review">
-                <h2 role="heading" aria-level="2" class="reviews__slider__article__title hidden" itemprop="name">Avis Luca
+                <h2 role="heading" aria-level="2" class="reviews__slider__article__title hidden" itemprop="name">Avis
+                    Luca
                     Roberty</h2>
                 <p class="reviews__slider__article__text" itemprop="reviewBody">
                     “Il a créé un site web exceptionnel pour moi en tant que photographe. Il a
@@ -331,7 +339,8 @@
                 </p>
             </article>
             <article class="reviews__slider__article" itemscope itemtype="https://schema.org/Review">
-                <h2 role="heading" aria-level="2" class="reviews__slider__article__title hidden" itemprop="name">Avis Chenghao
+                <h2 role="heading" aria-level="2" class="reviews__slider__article__title hidden" itemprop="name">Avis
+                    Chenghao
                     Pan</h2>
                 <p class="reviews__slider__article__text" itemprop="reviewBody">
                     “Un grand merci à Sam pour avoir transformé notre approche des commandes en
