adding css to footer

--- a/index.html
+++ b/index.html
@@ -511,31 +511,33 @@
             </div>
             <hr><!--Barre de séparation-->
             <div class="footer__group">
-                <a title="Retour en haut de la page" href="/">&copy; Curriculum Vitae</a>
                 <ul role="list" class="footer__group__infos">
+                    <li>
+                        <a title="Retour en haut de la page" href="/" class="cv">&copy; Curriculum Vitae</a>
+                    </li>
                     <li>
                         <a title="Retour en haut de la page" href="/">Site original</a>
                     </li>
                     <li>
-                        <a title="Retour en haut de la page" href="/">Sam</a>
+                        <a title="Retour en haut de la page" href="/" class="dot">Sam</a>
                     </li>
                     <li>
-                        <a title="Retour en haut de la page" href="/">Requena</a>
+                        <a title="Retour en haut de la page" href="/" class="dot">Requena</a>
+                    </li>
+                </ul>
+                <ul role="list" id="social" class="footer__social">
+                    <li>
+                        <a href="https://github.com/requena-sam" title="Vers mon profil Github">
+                            <img src="src/img/Github%20icons.svg" alt="">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.instagram.com/sam_requena/" title="Vers mon profil Instagram">
+                            <img src="src/img/Instagram%20logo.svg" alt="Mon instagram">
+                        </a>
                     </li>
                 </ul>
             </div>
-            <ul role="list" id="social" class="footer__social">
-                <li>
-                    <a href="https://github.com/requena-sam" title="Vers mon profil Github">
-                        <img src="#" alt="Mon Github">
-                    </a>
-                </li>
-                <li>
-                    <a href="https://www.instagram.com/sam_requena/" title="Vers mon profil Instagram">
-                        <img src="#" alt="Mon instagram">
-                    </a>
-                </li>
-            </ul>
             <div class="footer__copyright">
                 <p class="footer__copyright__text">
                     Tous droits réservés. Aucune reproduction, distribution ou transmission du contenu de ce site n'est
