Modification in ID

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <a href="#about" title="Vers la section d'a propos">À propos de moi</a>
             </li>
             <li>
-                <a href="#skills__container" title="Vers la section de compétences">Compétences</a>
+                <a href="#skills" title="Vers la section de compétences">Compétences</a>
             </li>
         </ul>
         <ul role="list" class="banner__navigation__list__more">
@@ -55,7 +55,7 @@
                 >
             </div>
             <span class="special_hidden">Une façon de travailler qui plait au clients</span>
-            <a href="#" class="home__column1__link special_hidden" title="Vers la section de mes avis clients">
+            <a href="#reviews" class="home__column1__link special_hidden secondary_link" title="Vers la section de mes avis clients">
                 En apprendre d’avantages sur mes clients
             </a>
         </div>
@@ -91,7 +91,7 @@
                         width="109"
                         height="198"
                 >
-                <a href="#" class="parcours__container__image__link" title="Vers la liste de mes compétences">
+                <a href="#" class="parcours__container__image__link secondary_link" title="Vers la liste de mes compétences">
                     Mes compétences apprises
                 </a>
             </div>
@@ -211,7 +211,7 @@
             </div>
         </div>
         <p class="about__lastText">Vous avez des questions&nbsp;?</p>
-        <a href="#" class="about__lastLink" title="Vers la section d'à propos">
+        <a href="#" class="about__lastLink secondary_link" title="Vers la section d'à propos">
             En savoir plus sur moi
         </a>
     </section>
@@ -269,7 +269,7 @@
                 </article>
                 <article class="skills__container__column2__article max">
                     <h3 role="heading" aria-level="3" class="skills__container__column2__article__title" lang="en">
-                        Soft skills__container
+                        Soft Skills
                     </h3>
                     <p class="skills__container__column2__article__text">
                         Doté de solides soft skills__container, je facilite la collaboration grâce à une communication
@@ -296,7 +296,7 @@
             </div>
         </div>
     </section>
-    <section class="reviews">
+    <section id="reviews" class="reviews">
         <div class="reviews__head">
             <h2 role="heading" aria-level="2" class="reviews__head__title">
                 Avis sur mon travail
@@ -501,7 +501,7 @@
                 </ul>
                 <ul role="list" class="footer__container__col5" itemscope itemtype="https://schema.org/contactPoint">
                     <li>
-                        <a title="Envoyer un email à Sam" href="mailto:samrequena1510@gmail.com"><span itemprop="email">samrequena1510@gmail.com</span></a>
+                        <a title="Envoyer un email à Sam" class="special_hidden" href="mailto:samrequena1510@gmail.com"><span itemprop="email">samrequena1510@gmail.com</span></a>
                     </li>
                     <li>
                         <a title="Téléphoner à Sam" href="tel:+32472860218"><span
@@ -516,7 +516,7 @@
                         <a title="Retour en haut de la page" href="/" class="cv">&copy; Curriculum Vitae</a>
                     </li>
                     <li>
-                        <a title="Retour en haut de la page" href="/">Site original</a>
+                        <a title="Retour en haut de la page" href="https://www.modernlife.com/">Site original</a>
                     </li>
                     <li>
                         <a title="Retour en haut de la page" href="/" class="dot">Sam</a>
