Adding button "Go to the top"

--- a/index.html
+++ b/index.html
@@ -446,6 +446,7 @@
             </div>
         </div>
     </section>
+    <a href="#home" class="top"><img src="src/img/Arrow%20haut%20.png" alt="Aller en haut" title="Vers le haut de la page" width="50" height="50"></a>
     <footer role="contentinfo">
         <section class="footer">
             <h2 role="heading" aria-level="2" class="footer__title">Sam Requena</h2>
