change contact close to img

--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
         </div>
     </section>
     <section id="contact" class="contact">
-        <span class="contact__close">FERMER</span>
+        <img src="src/img/close_icon.png" title="Fermer le formulaire" alt="Fermer" class="contact__close" width="96" height="120">
         <div class="contact__container">
             <div class="contact__container__infos">
                 <h2 role="heading" aria-level="2" class="title">
