--- a/index.html
+++ b/index.html
@@ -392,77 +392,83 @@
             </div>
         </div>
     </section>
-    <section id="contact" class="contact">
-        <img src="src/img/close_icon.png" title="Fermer le formulaire" alt="Fermer" class="contact__close" width="96"
-             height="120">
-        <div class="contact__container">
-            <div class="contact__container__infos">
-                <h2 data-animation="showUp" role="heading" aria-level="2" class="title">
-                    Me contacter
-                    <span class="sub_title">Formulaire</span>
-                </h2>
-                <p data-animation="showUp" class="text">
-                    Si vous souhaitez me poser une question ou me contacter afin qu’on puisse travailler sur un de vos
-                    projets, n’hésitez pas à me contacter via ce formulaire.
-                </p>
-                <img data-animation="showUp"
-                     src="src/img/contact_illustration.webp"
-                     alt="Illustration"
-                     title="Illustration"
-                     width="592"
-                     height="592"
-                     class="img special_hidden"
-                >
-            </div>
-            <div class="contact__form" data-animation="showUp">
-                <form action="#formContact" method="post" id="formContact">
-                    <fieldset>
-                        <div class="contact__form__firstname">
-                            <label for="firstname">Prénom</label>
-                            <input type="text" name="firstname" id="firstname" placeholder="Prénom" autocomplete="name"
-                                   required>
-                        </div>
-                        <div class="contact__form__name">
-                            <label for="name">Nom</label>
-                            <input type="text" name="name" id="name" placeholder="Nom" autocomplete="family-name"
-                                   required>
-                        </div>
-                        <div class="contact__form__email">
-                            <label for="email">Email</label>
-                            <input type="text" name="email" id="email" placeholder="Email" autocomplete="email"
-                                   required>
-                        </div>
-                        <div class="contact__form__phoneNumber">
-                            <label for="number">Numéro</label>
-                            <input type="tel" name="number" id="number" placeholder="+ 32 (0)472 86 02 18">
-                        </div>
-                        <div class="contact__form__budget">
-                            <label for="budget">Budget</label>
-                            <select name="budget" id="budget">
-                                <option value="default" class="default" disabled selected>Choisir mon budget</option>
-                                <option value="-3000">En dessous de 3.000€</option>
-                                <option value="3000__5000">Entre 3.000€ et 5.000€</option>
-                                <option value="5000__10000">Entre 5.000€ et 10.000€</option>
-                                <option value="+10000">Plus de 10.000€</option>
-                                <option value="no-mention">Ne pas mentionner pour l'instant</option>
-                            </select>
-                        </div>
-                        <div class="contact__form__message">
-                            <label for="message">Que voulez-vous me communiquer&nbsp;?</label>
-                            <textarea name="message" id="message" cols="40" rows="3"
-                                      placeholder="Inscrivez votre message"></textarea>
-                        </div>
-                        <button type="submit">Envoyer</button>
-                    </fieldset>
-                </form>
-                <div class="contact__form__bottom">
-                    <p class="contact__form__bottom__text">Envie de voir de quoi je suis capable&nbsp;?</p>
-                    <a href="#" class="contact__form__bottom__link" title="Visitez mon portfolio">Aller voir mon
-                        portfolio</a>
+    <div class="modal" id="contact">
+        <section class="contact">
+            <img src="src/img/close_icon.png" title="Fermer le formulaire" alt="Fermer" class="contact__close"
+                 id="closeContact" width="96"
+                 height="120">
+            <div class="contact__container">
+                <div class="contact__container__infos">
+                    <h2 data-animation="showUp" role="heading" aria-level="2" class="title">
+                        Me contacter
+                        <span class="sub_title">Formulaire</span>
+                    </h2>
+                    <p data-animation="showUp" class="text">
+                        Si vous souhaitez me poser une question ou me contacter afin qu’on puisse travailler sur un de
+                        vos
+                        projets, n’hésitez pas à me contacter via ce formulaire.
+                    </p>
+                    <img data-animation="showUp"
+                         src="src/img/contact_illustration.webp"
+                         alt="Illustration"
+                         title="Illustration"
+                         width="592"
+                         height="592"
+                         class="img special_hidden"
+                    >
+                </div>
+                <div class="contact__form" data-animation="showUp">
+                    <form action="#formContact" method="post" id="formContact">
+                        <fieldset>
+                            <div class="contact__form__firstname">
+                                <label for="firstname">Prénom</label>
+                                <input type="text" name="firstname" id="firstname" placeholder="Prénom"
+                                       autocomplete="name"
+                                       required>
+                            </div>
+                            <div class="contact__form__name">
+                                <label for="name">Nom</label>
+                                <input type="text" name="name" id="name" placeholder="Nom" autocomplete="family-name"
+                                       required>
+                            </div>
+                            <div class="contact__form__email">
+                                <label for="email">Email</label>
+                                <input type="text" name="email" id="email" placeholder="Email" autocomplete="email"
+                                       required>
+                            </div>
+                            <div class="contact__form__phoneNumber">
+                                <label for="number">Numéro</label>
+                                <input type="tel" name="number" id="number" placeholder="+ 32 (0)472 86 02 18">
+                            </div>
+                            <div class="contact__form__budget">
+                                <label for="budget">Budget</label>
+                                <select name="budget" id="budget">
+                                    <option value="default" class="default" disabled selected>Choisir mon budget
+                                    </option>
+                                    <option value="-3000">En dessous de 3.000€</option>
+                                    <option value="3000__5000">Entre 3.000€ et 5.000€</option>
+                                    <option value="5000__10000">Entre 5.000€ et 10.000€</option>
+                                    <option value="+10000">Plus de 10.000€</option>
+                                    <option value="no-mention">Ne pas mentionner pour l'instant</option>
+                                </select>
+                            </div>
+                            <div class="contact__form__message">
+                                <label for="message">Que voulez-vous me communiquer&nbsp;?</label>
+                                <textarea name="message" id="message" cols="40" rows="3"
+                                          placeholder="Inscrivez votre message"></textarea>
+                            </div>
+                            <button type="submit">Envoyer</button>
+                        </fieldset>
+                    </form>
+                    <div class="contact__form__bottom">
+                        <p class="contact__form__bottom__text">Envie de voir de quoi je suis capable&nbsp;?</p>
+                        <a href="#" class="contact__form__bottom__link" title="Visitez mon portfolio">Aller voir mon
+                            portfolio</a>
+                    </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
+    </div>
     <a href="#html" class="top"><img src="src/img/Arrow%20haut%20.png" alt="Aller en haut"
                                      title="Vers le haut de la page" width="50" height="50"></a>
     <footer role="contentinfo">
@@ -579,6 +585,7 @@
         </section>
     </footer>
 </main>
+<p class="btn-contact"><a href="#">Appuyez ici pour me contacter</a></p>
 <script type="module" src="src/js/main.js"></script>
 </body>
 </html>
